putting a password field in place

--- a/reader/templates/home.html
+++ b/reader/templates/home.html
@@ -4,7 +4,7 @@
 <section class="content">
 
   <div class="box">
-    <form action="{{ url_for('/login.login') }}" method="post" novalidate>
+    <form action="" method="post" novalidate>
       {{ form.hidden_tag() }}
       <p>
         {{ form.password(size=32) }}
