--- a/reader/static/home_styles.css
+++ b/reader/static/home_styles.css
@@ -10,7 +10,7 @@ form {
 }
 
 .box input[type=password] {
-  border: 1px solid #BEBEBE;
+  border: 1px solid Black;
   padding: 7px;
   margin: 0px;
   outline: none;
@@ -22,6 +22,13 @@ form {
 }
 
 .box input[type=submit] {
+  border: 1px solid transparent;
   border-radius: 8px;
-  background-color: #d6d6d6;
+  background-color: LightGrey;
+  cursor: pointer;
+  padding: 8px;
+}
+
+.box input[type=submit]:hover {
+  background-color: Red;
 }
