--- a/reader/templates/search.html
+++ b/reader/templates/search.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block content %}
-  <form autocomplete="off" action="{{ url_for('/search.search_results') }}">
-    <div class="autocomplete" style="width:300px;">
-      <input id="songname" type="text" name="name" placeholder="Song name">
-    </div>
-    <input type="submit" value="Search">
-  </form>
+  <div class="box">
+    <form autocomplete="off" action="{{ url_for('/search.search_results') }}">
+      <div class="autocomplete" style="width:300px;">
+        <input id="songname" type="text" name="name" placeholder="Song name">
+      </div>
+      <input type="submit" value="Search">
+    </form>
+  </div>
 
   <script>
     function autocomplete(inp, partialSongUrl, songByIdUrl) {
