fix display and remove extra logs

--- a/reader/templates/song.html
+++ b/reader/templates/song.html
@@ -7,6 +7,6 @@
 
 {% block content %}
   {% for cur in songs %}
-    <div>{{ cur }} by {{ cur[1] }} was at {{ cur[2] }} on <a href="http://www.billboard.com/charts/{{ cur[4] }}/{{ cur[3] }}">{{ cur[3] }}</a></div>
+    <div>{{ cur[0] }} by {{ cur[1] }} was at {{ cur[2] }} on <a href="http://www.billboard.com/charts/{{ cur[4] }}/{{ cur[3] }}">{{ cur[3] }}</a></div>
   {% endfor %}
 {% endblock %}
